
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Fixed a format string bug in "connection statistics" messages to clients.
  - Removed unnecessary #define of "LOCAL", now use plain C "static" instead.
  - Channel topics are no longer limited to 127 characters: now the only limit
    is the maximum length of an IRC command, i. e. 512 bytes (in practice, this
    limits the topic to about 490 characters due to protocol overhead).
  - Reverse DNS lookup code now checks the result by doing an additional
    lookup to prevent spoofing.
  - Added new IO layer which (optionally) supports epoll() and kqueue() in
    addition to the select() interface.

ngIRCd 0.9.1 (2005-08-03)

  - The KILL command killed much more than desired (including server links!)
    when the target user is connected to a remote server. Bug introduced in
    ngIRCd 0.9.0 ...  Reported by <qssl@fastmail.fm>, Thanks!
  - Changed some constants to be "signed" (instead of unsigned) to solve
    problems with old (pre-ANSI) compilers.

ngIRCd 0.9.0 (2005-07-24)

  ngIRCd 0.9.0-pre1 (2005-07-09)
  - Fixed maximum length of user names, now allow up to 9 characters.
  - Cut off oversized IRC messages that should be sent to the network instead
    of shutting down the (wrong) connection.
  - Don't generate error messages for unknown commands received before the
    client is registered with the server (like the original ircd).
  - Never run with root privileges but always switch the user ID.
  - Make "netsplit" messages RFC compliant.
  - Fix handling of QUIT Messages: send only one message, even if the client
    is member of multiple channels.