@@ -12,6 +12,8 @@
 
 ngIRCd CVSHEAD
 
+  - Changed handling of timeouts for unregistered connections: don't reset
+    the counter if data is received and disconnect clients earlier.
   - Fixed a format string bug in "connection statistics" messages to clients.
   - Removed unnecessary #define of "LOCAL", now use plain C "static" instead.
   - Channel topics are no longer limited to 127 characters: now the only limit
@@ -632,4 +634,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.288 2005/08/27 22:59:06 alex Exp $
+$Id: ChangeLog,v 1.289 2005/08/27 23:33:10 alex Exp $
